ex5/testdata/typechecker/error/ClassTest-err1.java
class ClassTest {
	public static void main(String[] a){
            A x;
            x = 3;  // TE
	}
}

class A {
}

